# cmake-tutorial

./: .gitignore  README.md  readme.md  style_standard.md
TODO/: cmake_paras_argument  property.cmake  生成器.cmake
chapter01/011_add_executable/: CMakeLists.txt  main.cpp
chapter01/012_add_executable_with_headfile/: CMakeLists.txt  main.cpp  print.h  run.sh
chapter01/013_executable_with_library/: CMakeLists.txt  main.cpp  readme.md
chapter01/013_executable_with_library/log/: CMakeLists.txt  log.cpp  log.h
chapter01/014_target_include&aux_source/: CMakeLists.txt  main.cpp
chapter01/014_target_include&aux_source/log/: CMakeLists.txt
chapter01/014_target_include&aux_source/log/src/: time.cpp
chapter01/015_target_link_directory/: CMakeLists.txt  main.cpp  run.sh
chapter01/015_target_link_directory/include/: log.h
chapter01/016_target_public_private_interface/: CMakeLists.txt  main.cpp
chapter01/016_target_public_private_interface/clock/src/: clock.cpp
chapter01/016_target_public_private_interface/timer/: CMakeLists.txt
chapter01/017_target_compile_definition/: main.cpp
chapter01/017_target_compile_definition/clock/: CMakeLists.txt
chapter01/017_target_compile_definition/clock/include/: clock.h
chapter01/017_target_compile_definition/clock/src/: clock.cpp
chapter01/017_target_compile_definition/timer/: CMakeLists.txt
chapter01/017_target_compile_definition/timer/include/: timer.h
chapter01/018_target_std&target_compile_feature/: CMakeLists.txt
chapter01/018_target_std&target_compile_feature/clock/: CMakeLists.txt
chapter01/018_target_std&target_compile_feature/timer/: CMakeLists.txt
chapter01/018_target_std&target_compile_feature/timer/src/: timer.cpp
chapter01/019_only_header_library/: CMakeLists.txt
chapter01/019_only_header_library/clock/: CMakeLists.txt
chapter01/019_only_header_library/clock/include/: clock.hpp
chapter01/019_only_header_library/timer/: CMakeLists.txt
chapter01/019_only_header_library/timer/src/: hour.cpp  timer.cpp
chapter02/021_set_unset/: CMakeLists.txt  run.sh
chapter02/021_set_unset/log/: CMakeLists.txt
chapter02/021_set_unset/log/src/: log.cpp  print.cpp
chapter02/022_include&message/: CMakeLists.txt  main.cpp
chapter02/022_include&message/log/: CMakeLists.txt
chapter02/022_include&message/practice/: message.cmake
chapter02/023_list&control_block/: CMakeLists.txt  main.cpp
chapter02/023_list&control_block/practice/: foreach&while.cmake  if-else.cmake  list.cmake
chapter02/023_list&control_block/timer/: CMakeLists.txt
chapter02/023_list&control_block/timer/src/: hour.cpp
chapter02/024_function&macro/: CMakeLists.txt
chapter02/024_function&macro/cmake/: function.cmake  macro.cmake
chapter02/025_cache&env&system_env/: CMakeLists.txt
chapter02/025_cache&env&system_env/practice/: cache.cmake  env.cmake  option.cmake  system_env.cmake
chapter02/025_cache&env&system_env/timer/include/: timer.h
chapter02/025_cache&env&system_env/timer/src/: minute.cpp  second.cpp
chapter02/026_string/: string.cmake
chapter02/027_file/: file.cmake
chapter03/: readme.md
chapter03/031_output/: CMakeLists.txt  main.cpp
chapter03/031_output/clock/: CMakeLists.txt
chapter03/031_output/clock/include/: clock.h
chapter03/031_output/clock/src/: clock.cpp
chapter03/031_output/cmake/: addfunc.cmake  deployment.cmake  standard.cmake
chapter03/031_output/timer/: CMakeLists.txt
chapter03/031_output/timer/include/: timer.h
chapter04/target_source/: readme.md
component/: CMakeLists.txt  compile.sh
component/log/: CMakeLists.txt
component/log/include/: log.h
component/log/src/: log.cpp  print.cpp  time.cpp
component/timer/include/: timer.h
component/timer/src/: timer.cpp
docs/: README.md  _coverpage.md  _navbar.md  index.html
docs/zh-cn/: _navbar.md  get_start.md
docs/zh-cn/about/: contact.md
